--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/amzia99/tinyapp1/issues"
   },
-  "homepage": "https://github.com/amzia99/tinyapp1#readme"
+  "homepage": "https://github.com/amzia99/tinyapp1#readme",
+  "dependencies": {
+    "express": "^4.21.2"
+  }
 }
